# llm-for-gitlab-code-review

./: .dockerignore  .env.example  Dockerfile  INTERNATIONALIZATION.md  INTERNATIONALIZATION_EN.md  LICENSE  README.md  README_EN.md  SUPPORTED_LANGUAGES.md  SUPPORTED_LANGUAGES_EN.md  TESTING.md  config.py  curd.py  docker-compose.yml  i18n.py  llm.py  main.py  models.py  pyproject.toml  pytest.ini  requirements.txt  review_manager.py  run_tests.py  test_i18n.py  utils.py
locales/: en_US.json  zh_CN.json
scripts/: generate_test_data.py  init.sql  setup_test_env.py
templates/: discussion.j2  discussion_i18n.j2  file_system.j2  file_system_en_US.j2  file_system_zh_CN.j2  file_user.j2  file_user_i18n.j2
tests/: __init__.py  conftest.py  test_config.py  test_curd.py  test_llm.py  test_main.py  test_models.py  test_performance.py  test_review_manager.py  test_utils.py
